--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,8 +2,13 @@ project:
   type: website
   output-dir: "docs"
 
+profile: 
+  group: [english, portuguese]
+
 website:
-  title: "Daniel Cardoso Portela Câmara"
+  title: "Daniel Cardoso Portela Câmara | Data Science | Epidemiology | Medical Entomology"
+  site-url: https://dcpcamara.github.io
+  description: "Website of Daniel Cardoso Portela Câmara, including his curriculum vitae (CV) and portfolio"
   navbar:
     left:
       - text: "Home"
@@ -13,19 +18,17 @@ website:
       - text: "CV"
         file: cv.qmd
     right:
-      - about.qmd
       - icon: linkedin
         href: https://www.linkedin.com/in/daniel-câmara-5270732b3/
       - icon: github
         href: https://github.com/dcpcamara
-      - text: "🇧🇷 PT"
-        href: index.html
       - text: "🇬🇧 EN"
-        href: index-en.html
+        href: index.html
+      - text: "🇧🇷 PT"
+        href: index-pt.html
 format:
   html:
     theme: yeti
     css: styles.css
 
 editor: visual
-
